<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_background"
    tools:context=".game_page">

    <ImageView
        android:id="@+id/hole_1"
        android:layout_width="128dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/hole_1"
        app:layout_constraintBottom_toTopOf="@+id/ghost_4"
        app:layout_constraintEnd_toStartOf="@+id/hole_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/hole" />

    <ImageView
        android:id="@+id/hole_2"
        android:layout_width="128dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/hole_2"
        app:layout_constraintBottom_toTopOf="@+id/ghost_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/hole_1"
        app:srcCompat="@drawable/hole" />

    <ImageView
        android:id="@+id/hole_3"
        android:layout_width="128dp"
        android:layout_height="75dp"
        android:layout_marginBottom="128dp"
        android:contentDescription="@string/hole_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/hole_4"
        app:srcCompat="@drawable/hole" />

    <ImageView
        android:id="@+id/hole_4"
        android:layout_width="128dp"
        android:layout_height="75dp"
        android:layout_marginBottom="128dp"
        android:contentDescription="@string/hole_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hole_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/hole" />

    <ImageView
        android:id="@+id/ghost_3"
        android:layout_width="91dp"
        android:layout_height="121dp"
        android:layout_marginEnd="76dp"
        android:contentDescription="@string/ghost_4"
        app:layout_constraintBottom_toTopOf="@+id/hole_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ghost" />

    <ImageView
        android:id="@+id/ghost_4"
        android:layout_width="91dp"
        android:layout_height="121dp"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/ghost_3"
        app:layout_constraintBottom_toTopOf="@+id/hole_4"
        app:layout_constraintEnd_toStartOf="@+id/ghost_3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ghost" />

    <ImageView
        android:id="@+id/ghost_1"
        android:layout_width="91dp"
        android:layout_height="121dp"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/ghost_1"
        app:layout_constraintBottom_toTopOf="@+id/hole_1"
        app:layout_constraintEnd_toStartOf="@+id/ghost_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ghost" />

    <ImageView
        android:id="@+id/ghost_2"
        android:layout_width="91dp"
        android:layout_height="121dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/ghost_2"
        app:layout_constraintBottom_toTopOf="@+id/hole_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ghost" />

    <ImageView
        android:id="@+id/score_img"
        android:layout_width="118dp"
        android:layout_height="27dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="116dp"
        app:layout_constraintBottom_toTopOf="@+id/ghost_2"
        app:layout_constraintEnd_toStartOf="@+id/score_count"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/score" />

    <TextView
        android:id="@+id/score_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="114dp"
        android:fontFamily="serif"
        android:text="0"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/ghost_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

</androidx.constraintlayout.widget.ConstraintLayout>