<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".start_page"
    android:background="@drawable/background_start">

    <ImageView
        android:id="@+id/ghost_move"
        android:layout_width="169dp"
        android:layout_height="214dp"
        android:layout_marginTop="422dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ghost" />

    <ImageButton
        android:id="@+id/start_button"
        android:layout_width="200dp"
        android:layout_height="76dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="11dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/about_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/start_btn" />

    <ImageButton
        android:id="@+id/about_button"
        android:layout_width="176dp"
        android:layout_height="52dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="36dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/ghost_move"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button"
        app:srcCompat="@drawable/about_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>